// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board Batsu 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ×
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Board Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Board Maru 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        ○
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Board Sankaku 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="square"
        onClick={[Function]}
      >
        △
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Game Default 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      次のプレイヤーは: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Batsu 1`] = `
<button
  className="square"
>
  ×
</button>
`;

exports[`Storyshots Square Default 1`] = `
<button
  className="square"
/>
`;

exports[`Storyshots Square Maru 1`] = `
<button
  className="square"
>
  ○
</button>
`;

exports[`Storyshots Square Sankaku 1`] = `
<button
  className="square"
>
  △
</button>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;
